# llama_hackathon

./: .env.example  .gitignore  README.md  extract_text.py  main.py  pipeline.py  pyproject.toml  requirements.txt  utils.py
data/processed_data/: extracted_cleaned_text.txt  split_passages.json
llm_agents/: llm_utils.py  pipeline.py  system_prompts.py
llm_app/: llm_utils.py  pipeline.py  system_prompts.py
llm_apps/: llm_utils.py  pipeline.py  system_prompts.py
pinecone/: query_pinecone_index.py
pinecone_app/: query_pinecone_index.py
rag/: embed_passages.py  embed_passages_hf.py  extract_text.py  extracted_text.txt  passages.json
rag/pinecone/: setup_pinecone.py
rag_scripts/: embed_passages.py  preprocess_test.py  preprocess_test_old.py
