[tool.poetry]
name = "llama_hackathon"
version = "0.1.0"
description = "Using LLama to provide easier access to persion services in Bulgarian"
authors = ["Tetiana Bas"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^2.0.0" 
torch-geometric = "^2.3.0" 
numpy = "^1.23.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.7.0"

loguru = "^0.7.2"
transformers = "^4.45.1"
seaborn = "^0.13.2"
datasets = "^3.0.2"
sentence-transformers = "^3.2.1"
togather = "^0.9.1"
together = "^1.3.3"
python-dotenv = "^1.0.1"
pymupdf = "^1.24.13"
nltk = "^3.9.1"
requests = "^2.32.3"
[tool.poetry.dev-dependencies]
pytest = "^7.2.0"  
black = "^23.3b0"  
flake8 = "^6.0.0" 
isort = "^5.12.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
exclude = ["venv", ".git", "__pycache__", "build", "dist"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.poetry.scripts]
train = "src.train:main"
evaluate = "src.evaluate:main"
